--- a/package.json
+++ b/package.json
@@ -5,15 +5,28 @@
 	"private": "true",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "webpack"
+		"build": "webpack",
+		"dev": "webpack serve"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
 		"clean-webpack-plugin": "^4.0.0",
+		"css-loader": "^6.7.1",
 		"html-webpack-plugin": "^5.5.0",
+		"postcss": "^8.4.12",
+		"postcss-loader": "^6.2.1",
+		"sass": "^1.49.10",
+		"sass-loader": "^12.6.0",
+		"style-loader": "^3.3.1",
+		"ts-loader": "^9.2.8",
+		"typescript": "^4.6.3",
 		"webpack": "^5.70.0",
-		"webpack-cli": "^4.9.2"
+		"webpack-cli": "^4.9.2",
+		"webpack-dev-server": "^4.7.4"
+	},
+	"dependencies": {
+		"postcss-preset-env": "^7.4.3"
 	}
 }
