--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"postcss-loader": "^6.2.1",
 		"sass": "^1.49.10",
 		"sass-loader": "^12.6.0",
+		"sass-to-string": "^1.6.2",
 		"style-loader": "^3.3.1",
 		"ts-loader": "^9.2.8",
 		"typescript": "^4.6.3",
