--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"clean-webpack-plugin": "^4.0.0",
 		"css-loader": "^6.7.1",
+		"html-loader": "^3.1.0",
 		"html-webpack-plugin": "^5.5.0",
 		"postcss": "^8.4.12",
 		"postcss-loader": "^6.2.1",
